# upwork-extractor

./: .gitignore  Makefile  README.md  docs  pyproject.toml
post_extractor/: __init__.py  cli.py  extractor.py
posting_extractor/: __init__.py  cli.py  extractor.py
tests/: test_extractor.py
tests/fixtures/: sample.html
upwork_extractor/: cli.py  extractor.py
