[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posting-extract"
version = "0.1.0"
description = "Extract Markdown from job posting HTML files"
requires-python = ">=3.10"
dependencies = [
    "markdownify>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.scripts]
posting-extract = "posting_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["posting_extractor*"]
